<resources>
    <string name="app_name">VagSmart V5.2</string>
    <string name="version">V5.2</string>
    <string name="no_ble">BLE not supported</string>
    <!-- Misc items -->
    <string name="zero">0</string>
    <string name="refreshText">Pull Down to Refresh</string>
    <string name="strength">Strength</string>
    <string name="data_reading">Sense Reading</string>
    <string name="left_title">Left</string>
    <string name="right_title">Right</string>
    <string name="bar_100">100 -</string>
    <string name="bar_75">75 -</string>
    <string name="bar_50">50 -</string>
    <string name="bar_25">25 -</string>
    <string name="bar_0">0 -</string>
    <string name="start_excising">Start Exercising</string>
    <string name="calibrate_button">Calibrate</string>
    <string name="log_data">Log Data</string>
    <string name="start">START</string>
    <string name="connect_v3">Connect</string>
    <string name="make_sure_your_device_is_active">Make sure your device is active</string>
    <string name="label_permissions">Please enable Microphone and Storage permissions.</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
