<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/promity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        android:text="@string/strength"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="36sp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/senseAverage"
        android:layout_below="@+id/promity"
        android:text="0"
        android:textSize="24sp"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/bar_start_button"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:background="@color/colorPrimaryLight"
        android:onClick="goStart"
        android:text="@string/start"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@id/promity"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:layout_toStartOf="@+id/proximity_meter"
        android:gravity="end"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="top"
            android:text="@string/bar_100"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginBottom="25dp"
            android:text="@string/bar_75"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/bar_50"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginTop="25dp"
            android:text="@string/bar_25"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:text="@string/bar_0"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/proximity_meter"
        android:layout_width="3dp"
        android:layout_height="match_parent"
        android:layout_below="@id/promity"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp"
        android:layout_toStartOf="@+id/proximity_bar"
        android:orientation="horizontal">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/proximity_bar"
        android:layout_width="500dp"
        android:layout_height="match_parent"
        android:layout_below="@id/promity"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@+id/proximity_meter"
        android:layout_alignTop="@+id/proximity_meter"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ProgressBar
            android:id="@+id/progressBar1"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:progressDrawable="@drawable/progressbartheme"
            android:progress="70"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"/>
        <ProgressBar
            android:id="@+id/progressBar2"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:progressDrawable="@drawable/progressbartheme"
            android:progress="60"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"/>
        <ProgressBar
            android:id="@+id/progressBar3"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:progressDrawable="@drawable/progressbartheme"
            android:progress="50"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"/>
        <ProgressBar
            android:id="@+id/progressBar4"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:progressDrawable="@drawable/progressbartheme"
            android:progress="50"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"/>
        <ProgressBar
            android:id="@+id/progressBar5"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:progressDrawable="@drawable/progressbartheme"
            android:progress="60"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"/>
        <ProgressBar
            android:id="@+id/progressBar6"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:progressDrawable="@drawable/progressbartheme"
            android:progress="70"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"/>

    </LinearLayout>

    <CheckBox
        android:id="@+id/radioButton"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:text="@string/log_data"
        android:textSize="24sp"
        android:layout_alignBottom="@+id/bar_start_button"
        android:layout_alignTop="@+id/promity"
        android:layout_toStartOf="@+id/promity" />
</RelativeLayout>